--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    background-color:darkslategrey  ;
+}
 .container{
     display:flex;
     align-items: center;
@@ -45,8 +48,27 @@
     color: white;
     width: 100%;
     text-align: right;
-        vertical-align: bottom;
-    font-size: 45px;
+    vertical-align: bottom;
+    font-size: 55px;
     padding: 0 30px;
     box-sizing: border-box;
+    display: inline-block;
 }
+button{
+    height: 71px;
+    width: 71px;
+    border-radius: 100px;
+    background-color: transparent;
+    border-color: transparent;
+    color: white;
+    font-size: 30px;
+    text-align: center;
+    align-items: center;
+    transition: background-color 0.3s ease;
+}
+button:active {
+   background-color: antiquewhite;
+  }
+  button:focus {
+    outline: none; 
+  }
